bhi
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudsmith-package"    # Add this learnt from https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
version = "0.0.1"              # Took this version from src/example_package/__init__.py

authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 

[tool.hatch.build.targets.wheel]             # Hatch is primarily designed as a command-line tool and handles Python environment management internally.
packages = ["src/example_package"]
